<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightSensor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lambda">Lambda:</string>
    <string name="current_val">Bierząca wartość:</string>
    <string name="avg_val">Średnia wartość:</string>
    <string name="zero">0</string>
    <string name="def_lambda_val">500 lambda</string>
    <string name="content_desc">Porzednio zrobione zdjęcie</string>
    <string name="execute">Wykonaj!</string>
    <string name="luminance">Luminancja:</string>
    
    <string name="no_selected_item_info">Brak zaznaczonej kalibracji!</string>
    <string name="no_selected_point_info">Brak zaznaczonego punktu!</string>
    <string name="insert_calibration_dialog_title">Wpisz nazwę nowej kalibracji:</string>
    <string name="insert_point_dialog_title">Wprowadź nowy punkt:</string>
    <string name="edit_point_dialog_title">Edytuj punkt:</string>
    <string name="positive_btn">OK</string>
    <string name="negative_btn">Anuluj</string>
    <string name="delete_dialog_text">Czy na pewno usunąć?</string>

    <string name="insert_calibration">Dodaj kalibrację</string>
    <string name="delete_calibration">Usuń kalibrację</string>
    <string name="edit_calibration">Edytuj kalibrację</string>
    <string name="insert_point">Dodaj punkt</string>
    <string name="delete_point">Usuń punkt</string>
    <string name="edit_point">Edytuj punkt</string>
    
    <string name="before">Odczyt: </string>
    <string name="after">Kalibracja: </string>
</resources>