<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/insert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_point" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_point" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_point" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:weightSum="5" >
    	
    	<TextView 
        	android:layout_width="0dp"
        	android:layout_height="wrap_content" 
        	android:layout_weight="2"
        	android:text="Wartość:"/>
    	
    	<TextView 
        	android:layout_width="0dp"
        	android:layout_height="wrap_content" 
        	android:layout_weight="2"
        	android:text="Kalibracja:"/>
    	
    	<TextView 
        	android:layout_width="0dp"
        	android:layout_height="wrap_content" 
        	android:layout_weight="1"
        	android:text=""/>
    	
	</LinearLayout>
    
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>